implementing universal , added some comments, fixed z-index of scroll then fix

--- a/src/styles/partials/_displayResults.scss
+++ b/src/styles/partials/_displayResults.scss
@@ -33,7 +33,6 @@
   }
 
   .user{
-    // border: 1px solid black;
     position: relative;
     border-radius: 8px 8px 0 0;
     height: 96px;
@@ -57,7 +56,6 @@
     }
     
     input[type="radio"]:checked + div {
-      // border: 1px solid black;
       background: $white;
       border-radius: 8px 8px 0 0;
     }
@@ -81,7 +79,6 @@
 
     input[type="radio"] {
       cursor: pointer;
-      // opacity: 0;
       @include position(0, null, null, 0);
       width: 100%;
       height: 100%;
@@ -121,8 +118,7 @@
 
 // FILTER EVENTS
 .containerFilterEvents {
-  // @include flex(row, nowrap, space-between, null);
-  @include flex(row, wrap, space-between, null);
+  @include flex(row, nowrap, space-between, null);
   padding: 20px 0;
   margin: 28px 0 12px;
   border-top: 1px solid $green;
@@ -139,6 +135,8 @@
     border-radius: 5px;
     padding: 10px 12px;
   }
+
+  // To achieve custom arrow dropdown
   select {
     appearance:none;
     background: url(./../assets/sort-down-solid.svg) no-repeat 96% -8px $white;
@@ -171,21 +169,19 @@
   }
 }
 
+// implementing scroll-then-fix
 .fixed-nav{
   position: fixed;
   top:0;
   left:0;
   right: 0;
-  z-index: 1;
+  z-index: 20;
 }
 
 // media queries
 @media (max-width:1270px) {
   .filterFields {
     max-width:70%;
-    select {
-      // width:25%;
-    }
   }
 }
 
@@ -194,12 +190,7 @@
   flex-direction: column;
   max-width: 100%;
   }
-
-
-
   .filterButtons {
-    
     text-align: center;
-    
   }
 }
